SerDe interface rework